# PaperBuilder

./: .editorconfig  .gitattributes  .gitignore  BuildTool-Mac.command  BuildTool-Shell.sh  BuildTool-Windows (UNTESTED).bat  Cargo.toml  LICENCE.txt  README.md  installer.bash  installer.js  package.json
.github/workflows/: prerelease.yml
src/: exit.rs  main.rs  model.rs
