[package]
name = "paperbuilder"
version = "0.1.0"
authors = ["Protonull"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["serde_derive"] }
colored = "2"
